--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
 
-    <main> <!-- Conteúdo principal -->
+    <main> <!-- Contreúdo principal -->
         <!-- Seção inicial da página inicial -->
         <section class="bem-vindo">
             <div class="conteudo_secao">
